# SinoMem

./: .gitignore  .mailmap  CLAUDE.md  LICENSE  README.md  README_EN.md  agent-memory-lite-hermes-adapter-guide.md  install.sh  pyproject.toml  ruff.toml  sinomem-hermes-adapter-guide.md  uninstall.sh
agent_memory_lite/: __init__.py  cli.py  config.py  embedder.py  engine.py  import_holographic.py  mcp_server.py  migrate.py  schema.py  search.py  store.py
agent_memory_lite/core/: config.py  embedder.py  engine.py  logger.py  schema.py  search.py  shared.py  store.py  tokenizer.py
agent_memory_lite/entrypoints/: cli.py  mcp_server.py
agent_memory_lite/plugins/: base.py
agent_memory_lite/plugins/autogen/: __init__.py
agent_memory_lite/plugins/claude_code/: capture_write.py  inject_memory.py  persist_session.py
agent_memory_lite/plugins/crewai/: __init__.py
agent_memory_lite/plugins/hermes/: provider.py
agent_memory_lite/plugins/langchain/: __init__.py
agent_memory_lite/tools/: import_holographic.py  migrate.py
dicts/: tech_terms.txt
hermes-plugin/: __init__.py
hermes_plugin/: __init__.py  plugin.yaml
installers/: install_claude_code.sh
memory/: MEMORY.md  setuptools-scm-usage.md
sinomem/: __init__.py
sinomem/core/: __init__.py  config.py  embedder.py  engine.py  logger.py  schema.py  search.py
sinomem/entrypoints/: __init__.py  cli.py  mcp_server.py
sinomem/plugins/: __init__.py  base.py
sinomem/plugins/autogen/: __init__.py
sinomem/plugins/claude_code/: __init__.py  capture_write.py  inject_memory.py  persist_session.py
sinomem/plugins/crewai/: __init__.py
sinomem/plugins/hermes/: __init__.py  provider.py
sinomem/plugins/langchain/: __init__.py
sinomem/tools/: __init__.py  import_holographic.py
tests/: conftest.py  test_engine.py  test_import_holographic.py  test_mcp_server.py  test_migrate.py  test_plugins.py  test_search.py  test_store.py
