[project]
name = "agent-memory-lite"
version = "0.5.8"
description = "轻量级中文友好的 Agent 记忆增强系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0",
    "jieba>=0.42",
    "click>=8.0",
    "tokenizers>=0.23.1",
]

[project.optional-dependencies]
embedding = [
    "onnxruntime>=1.27.0",
    "sqlite-vec>=0.1.9",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
aml = "agent_memory_lite.entrypoints.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "onnxruntime>=1.27.0",
    "sqlite-vec>=0.1.9",
]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle 错误
    "W",     # pycodestyle 警告
    "F",     # Pyflakes（未使用导入等）
    "I",     # isort（import 排序）
    "UP",    # pyupgrade（现代化语法）
    "B",     # flake8-bugbear（常见 bug）
    "SIM",   # flake8-simplify（简化建议）
]
ignore = [
    "E501",  # 行长度（由 format 处理）
]
exclude = [
    ".venv",
    "build",
    "dist",
    "__pycache__",
    ".git",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
